--- a/templates/content/course_list.html
+++ b/templates/content/course_list.html
@@ -14,7 +14,7 @@
 
             {% for course in object_list %}
             <div class="col">
-                <a href="{% url 'content:course-detail' course.slug %}">
+                <a href="{{ course.get_absolute_url }}">
                     <div class="card shadow-sm">
 
                         <img class="bd-placeholder-img card-img-top" width="100%" height="225"
