--- a/templates/content/video_detail.html
+++ b/templates/content/video_detail.html
@@ -12,19 +12,28 @@
 
         <div class="row">
 
-            <div class="col-3">
+            <div class="col-2">
             </div>
 
-            <div class="col-6">
+            <div class="col-8">
 
                 <div class="card shadow-sm">
 
-                    {% comment %} <img class="bd-placeholder-img card-img-top" width="100%" height="270"
-                        src="{{ object.thumbnail.url }}" alt="{{ object.name }}"> {% endcomment %}
+                    <div class="w-full">
+                        <div data-vimeo-initialized="true">
+                            <div style="padding:56.25% 0 0 0;position:relative;">
+                                <iframe src="https://player.vimeo.com/video/{{ object.vimeo_id }}"
+                                    allow="autoplay; fullscreen; picture-in-picture" allowfullscreen=""
+                                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="1-preview"
+                                    data-ready="true" frameborder="0"></iframe>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="card-body">
-                        <p class="card-text">{{ object.vimeo_id }}</p>
-                        <p class="card-text">{{ object.title }}</p>
+
+                        <p class="card-text">id: {{ object.vimeo_id }}</p>
+                        <p class="card-text">title: {{ object.title }}</p>
                         <p class="card-text">{{ object.description }}</p>
 
                     </div>
@@ -47,7 +56,7 @@
             </div>
 
 
-            <div class="col-3"></div>
+            <div class="col-2"></div>
 
 
         </div>
