--- a/templates/payment/payment_create.html
+++ b/templates/payment/payment_create.html
@@ -1,10 +1,39 @@
 {% extends "base.html" %}
 
 {% block javascript %}
+<script src="https://polyfill.io/v3/polyfill.min.js?version=3.52.1&features=fetch"></script>
+<script src="https://js.stripe.com/v3/"></script>
 {% endblock javascript %}
 
 
 {% block content %}
+
+<div class="container my-5 py-5">
+
+    <h1>Stripe Payment</h1>
+
+    <hr>
+
+
+    <div class="card">
+        <div class="card-header">
+            {{ pricing.name }} - &yen;{{ pricing.price }}
+        </div>
+
+        <div class="card-body">
+
+            <form action="{% url 'payment:create-checkout-session' pricing.pk %}" method="POST">
+                {% csrf_token %}
+                <button type="submit" id="checkout-button">Checkout</button>
+            </form>
+
+
+        </div>
+    </div>
+
+
+</div>
+
 
 
 
