--- a/templates/base.html
+++ b/templates/base.html
@@ -46,19 +46,25 @@
                             </a>
                         </li>
 
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'content:course-list' %}">Course
                                 <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
 
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'payment:enroll' %}">Enroll
                                 <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
 
-
+                        {% if request.user.subscription.stripe_subscription_id %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'payment:cancel-subscription' %}">Cancel
+                                <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+                        {% endif %}
 
                         {% if not request.user.is_authenticated %}
                         <li class="nav-item">
